# trc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  INDEX.txt  README.md  build.cpp  build.rs  buildtrc.cpp  rustfmt.toml  xmake.lua
cpp/: .clang-format  CMakeLists.txt  README.md  xmake.lua
cpp/doc/use/: TDB.md
cpp/script/: black_test.py  clang_format.py  easy.py  gen_locales.py  merge_and_push_master.py
cpp/src/TVM/: TVM.cppm  TVMdef.cppm  func.cppm  memory.cppm
cpp/src/base/: cmdparser.cppm  color.cppm  ctree_loader.cppm  error.cppm  func_loader.cppm  trcdef.cppm  unreach.cppm
cpp/src/compiler/: compile_env.cppm  compiler.cppm  compiler_def.cppm
cpp/src/trc/: Trc.cpp  Trc_logo.rc
cpp/tests/unittest/: README.md
derive/: Cargo.toml
derive/src/: def_module.rs  function.rs  lib.rs
derive/tests/: import_module_test.rs
language/: CMakeLists.txt  chinese.cpp  english.cpp  language.cppm  xmake.lua
rust/: Cargo.toml  README.md
rust/derive/src/: def_module.rs  function.rs  lib.rs
rust/derive/tests/: import_module_test.rs
rust/docs/: usage.md
rust/docs/developer/: EBNF.md  function.md  translation.md
rust/examples/: expr.trc  print.trc  var.trc
rust/examples/bench/: output.cpp  output.py  output.rs
rust/locales/: en.toml  zh-CN.toml
rust/script/: gen_locales.py  pre-commit
rust/src/: base.rs  cfg.rs  compiler.rs  lib.rs  main.rs  tools.rs  tvm.rs
rust/src/base/: codegen.rs  ctrc.rs  error.rs  func.rs  stdlib.rs  utils.rs
rust/src/compiler/: ast.rs  llvm_convent.rs  scope.rs  token.rs
rust/src/tools/: compile_tool.rs  run.rs  tshell.rs  update.rs
rust/src/tvm/: algo.rs  function.rs  gc.rs  stdlib.rs  types.rs
rust/stdlib/: Cargo.toml
src/: CMakeLists.txt  Trc.cpp  base.rs  cfg.rs  compiler.rs  lib.rs  main.rs  tools.rs  tvm.rs  xmake.lua
src/Compiler/: CMakeLists.txt  Compiler.cpp  Compiler.cppm  check.cpp  compile_def.cpp  compile_env.cppm  compiler_def.cpp  compiler_def.cppm  grammar.cpp  optimize.cpp  pre.cpp  pri_compiler.cpp  token.cpp  token.cppm  xmake.lua
src/Compiler/Compiler/: Compiler.cpp  compile_env.cpp  compile_env.h
src/Compiler/grammar/: grammar.cpp  grammar_env.cpp  grammar_env.h  obj.cpp  obj.h
src/Compiler/token/: token.cpp  token_env.h
src/Error/: Error.cpp
src/TVM/: CMakeLists.txt  TRE.cpp  TRE.cppm  TVM.cpp  TVM.cppm  TVM_data.cpp  TVM_data.cppm  TVMdef.cpp  built_in_func.cppm  lib.cppm  memory.cpp  memory.cppm  object.cppm  xmake.lua
src/TVM/TVM_bytecode/: TVM_condits.cpp  TVM_func.cpp  TVM_opers.cpp  TVM_others.cpp  TVM_var.cpp
src/TVM/built_in/: built_in_func.cpp
src/TVM/types/: base.cpp  base.cppm  bigfloat.cpp  bignum.cpp  trc_array.cpp  trc_float.cpp  trc_flong.cpp  trc_flong.cppm  trc_int.cpp  trc_int.cppm  trc_list.cpp  trc_long.cpp  trc_long.cppm  trc_map.cpp  trc_map.cppm  trc_string.cpp  trc_string.cppm
src/TVMbase/: CMakeLists.txt  TRE.cpp  TVM_data.cpp  memory.cpp
src/TVMbase/types/: base.cpp  trc_array.cpp  trc_float.cpp  trc_flong.cpp  trc_int.cpp  trc_long.cpp  trc_map.cpp  trc_string.cpp
src/base/: CMakeLists.txt  Error.cppm  autodll.cpp  autodll.cppm  cmdparser.cppm  code_loader.cppm  codegen.rs  color.cpp  color.cppm  ctrc.rs  ctree_loader.cppm  dll.rs  error.rs  func.rs  func_loader.cppm  io.cpp  io.cppm  stdlib.rs  trcdef.cpp  trcdef.cppm  unreach.cppm  utils.rs  xmake.lua
src/base/Error/: Error.cpp
src/base/easter_eggs/: easter_eggs.cpp
src/base/loader/: code_loader.cpp  ctree_loader.cpp  func_loader.cpp
src/base/memory/: free.cpp  memory.cppm  memory_pool.cpp  new.cpp
src/base/utils/: bytes.cpp  bytes.cppm  filesys.cpp  filesys.cppm  platform.cpp  progress_bar.cpp  progress_bar.cppm  types.cpp
src/compiler/: ast.rs  compile_env.cppm  compiler.cpp  compiler.cppm  compiler.hpp  compiler_def.cppm  linker.rs  llvm_convent.rs  llvm_convert.rs  manager.rs  optimizer.rs  parser.yy  scope.rs  token.cppm  token.ll  token.rs
src/compiler/ast/: ast_base.rs  lexprocess.rs
src/include/: Error.h  bytes.h  cfg.h  code_loader.h  ctree_loader.h  data.hpp  filesys.h  func_loader.h  generated_params.h  generated_params.hpp  node.h  obj_malloc.hpp  platform.h  platform.hpp  read.h  share.h  sharelib.h  tools.h  tools.hpp  trcdef.h  type.h  type.hpp  unreach.hpp
src/include/Compiler/: Compiler.h  Compiler.hpp  compile_def.hpp  compile_env.h  compile_env.hpp  compile_share.h  compiler_def.h  compiler_def.hpp  dll.h  grammar.h  grammar_env.h  library.h  optimize.h  pri_compiler.h  pri_compiler.hpp  token.h  token.hpp
src/include/TVM/: TRE.h  TRE.hpp  TVM.h  TVM.hpp  TVM_data.h  TVM_data.hpp  TVM_impl.h  TVMdef.h  TVMdef.hpp  array.h  base.h  basic_vm.h  bigfloat.h  bignum.h  built_in_func.h  built_in_func.hpp  dll.h  float.h  flong.h  func.h  func.hpp  int.h  lib.h  lib.hpp  library.h  long.h  map.h  memory.h  memory.hpp  object.h  string.h
src/include/TVMbase/: TRE.h  TVM_data.h  dll.h  library.h  memory.h
src/include/base/: Error.h  Error.hpp  autodll.h  autodll.hpp  code_loader.h  code_loader.hpp  color.h  color.hpp  ctree_loader.h  ctree_loader.hpp  dll.h  dyna_array.hpp  easter_eggs.h  func_loader.h  func_loader.hpp  io.hpp  library.h  trcdef.h  trcdef.hpp
src/include/language/: dll.h  error.h  error.hpp  language.h  language.hpp  library.h  library.hpp
src/include/memory/: mem.h  mem.hpp  memory_pool.h  (+1 more)
src/language/: CMakeLists.txt  chinese.cpp  english.cpp
src/loader/: code_loader.cpp  ctree_loader.cpp  func_loader.cpp
src/memory/: free.cpp  free_TVM.cpp  free_compiler.cpp  gc.cpp  memory_pool.cpp  new.cpp  objs_pool_TVM.cpp
src/share/: CMakeLists.txt  compile_share.cpp  share.cpp
src/tools/: all.cpp  brun.cpp  build.cpp  build.rs  clean.cpp  compile_tool.rs  crun.cpp  dis.cpp  dis.rs  grammar.cpp  new.rs  run.cpp  run.rs  tdb.cpp  token.cpp  token.rs  tshell.cpp  tshell.rs  update.rs
src/trc/: CMakeLists.txt  Trc.cpp
src/tvm/: function.rs  gc.rs  stdlib.rs  types.rs
src/utils/: bytes.cpp  filesys.cpp  node.cpp  platform.cpp  read.cpp  type.cpp
tests/unittest/: CMakeLists.txt  main.cpp  xmake.lua
(+1102 files in other folders)
