[package]
name = "trc"
version = "0.0.1"
edition = "2021"
authors = ["limuy"]
description = "a easy-learn programming language"
homepage = "https://github.com/limuy2022/trc"
repository = "https://github.com/limuy2022/trc"
license = "GPL 3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
downcast-rs = "1.2"
num-bigint = "0.4"
# llvm-sys = "170.0.1"
derive = { path = "./derive" }
libloading = "0.8"
# stdlib = { path = "./stdlib" }
rust-i18n = "3.0"
sys-locale = "0.3"
rustyline = { version = "14.0", features = ["with-file-history"] }
suffix_array = "0.5.0"
paste = "1"
shadow-rs = "0"
libcore = { path = "./libcore" }
collection_literals = "1"
thiserror = "1"
dirs = "5"

[build-dependencies]
shadow-rs = "0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace]
members = ["derive", ".", "stdlib", "libcore"]

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "locales"
