[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.48", features = ["extra-traits", "full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"

[lib]
proc-macro = true
