[package]
name = "trc"
version = "0.1.0"
edition = "2021"
license = "GPL3"
authors = ["limuy"]
description = "a easy-learn programming language"
homepage = "https://github.com/limuy2022/trc"
repository = "https://github.com/limuy2022/trc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
gettext-rs = "0.7.0"
colored = "2.1.0"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
num-bigint = "0.4.4"

[profile.release]
panic = "abort"
