[package]
name = "trc"
version = "0.1.0"
edition = "2021"
authors = ["limuy"]
description = "a easy-learn programming language"
homepage = "https://github.com/limuy2022/trc"
repository = "https://github.com/limuy2022/trc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
gettext-rs = "0.7.0"
colored = "2.1.0"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
llvm-sys = "170.0.1"
once_cell = "1.19.0"
derive = { path = "./derive" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[workspace]
members = ["derive", "."]
