set(CMAKE_CXX_VISIBILITY_PRESET hidden)
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wextra -Wall -O3 -fno-exceptions -fno-rtti -fno-asynchronous-unwind-tables -fdata-sections -ffunction-sections")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wextra -Wall -g -O0 -fno-exceptions -fno-rtti -fno-asynchronous-unwind-tables -fdata-sections -ffunction-sections")
	list(APPEND CMAKE_EXE_LINKER_FLAGS "-Wl")
	list(APPEND CMAKE_SHARED_LINKER_FLAGS "-Wl")
endif()

add_subdirectory(language)
add_subdirectory(base)
add_subdirectory(TVM)
add_subdirectory(Compiler)
add_subdirectory(trc)
add_subdirectory(TVMbase)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
	target_link_libraries(base dl)
endif()

target_link_libraries(base language easyloggingpp)
target_link_libraries(TVMbase base language)
target_link_libraries(TVM language base TVMbase Compiler)
target_link_libraries(Compiler language base TVMbase)
target_link_libraries(Trc language base TVM Compiler TVMbase gflags::gflags)
